Fixed some runtime bugs and moved JDK version from 8 to 11.